kubernetes-manifests/misp-modules-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: misp
  name: misp-modules
  labels:
    app: misp
    component: modules
spec:
  ports:
    - port: 6666
  selector:
    app: misp
    component: modules
