kubernetes-manifests/misp-redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: misp
  name: misp-redis
  labels:
    app: misp
    component: redis
spec:
  ports:
    - port: 6379
  selector:
    app: misp
    component: redis
