kubernetes-manifests/misp-server-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: misp
  name: misp-server
  labels:
    app: misp
    component: server
spec:
  ports:
    - port: 80
  selector:
    app: misp
    component: server
